--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -351,168 +351,61 @@
 
                     </section>
 
-
                     <section class="card card--campaigns">
 
                         <h3>Aktuella kampanjer</h3>
-                        <p><strong>Dubbelpoäng</strong>på veckoresor<br>t.o.m. 30/11</p>
 
-                    </section>
+                        <div class="campaignHeader">
 
-                    <section class="card card--campaigns2">
-                        <h3>Aktuella kampanjer</h3>
-                        <p>Behöver du hjälp? Lämna feedback i appen.</p>
-                    </section>
+                            <div>
+                                <p class="campaignIntro">Ta del av pågående erbjudanden och bonuskampanjer hos Limovia.
+                                </p>
+                            </div>
 
-                    <section class="card card--support">
+                            <div class="campaignFilters">
+                                <button class="chip chip--active">Aktiva</button>
+                                <button class="chip">Kommande</button>
+                                <button class="chip">Utgångna</button>
+                            </div>
 
-                        <h3>Support</h3>
-                        <p>Behöver du hjälp?</p>
-                        <a href="#">Chatta med Limovia</a>
+                        </div>
+
+                        <!-- Highlight-kampanj -->
+                        <article class="campaignHighlight">
+
+                            <div class="campaignHighlight-body">
+
+                                <div>
+                                    <p class="campaignTag">Poängkampanj</p>
+                                    <h4>Dubbelpoäng på veckoresor</h4>
+                                    <p class="campaignText">
+                                        Få <strong>2× Move-U Miles</strong> på alla resor måndag–torsdag till och med
+                                        <strong>30/11</strong>. Gäller både lokal transfer och flygplatstransfer.
+                                    </p>
+
+                                    <div class="campaignMeta">
+                                        <span><i class="fa-regular fa-clock"></i> Gäller t.o.m. 30/11</span>
+                                        <span><i class="fa-solid fa-gift"></i> Upp till 5 000 extra miles</span>
+                                    </div>
+
+                                </div>
+
+                                <div class="campaignCTA">
+                                    <button class="btn campaignPrimary">Aktivera kampanj</button>
+                                    <button class="btn campaignGhost">Läs regler</button>
+                                </div>
+
+                            </div>
+
+                        </article>
 
                     </section>
 
                 </div>
+
             </div>
+
         </div>
-
-        <!--<div class="mainProfileInfo">
-
-            <div class="welcomeMessage">
-                <div class="welcomeText">
-                    <h1>Välkomen tillbaka Mr. Fontaine</h1>
-                </div>
-
-                <div class="welcomeImage">
-                    <img src="IMAGES/VolvoEX90Transparent2.png" alt="Volvo EX90 Transparent">
-                </div>
-            </div>
-
-            <div class="dashboardInfoContainer">
-
-                <div class="tripSection row1">
-
-                    <div class="nextTripSection">
-
-                        <div class="nextTripLeft">
-
-                            <h2 class="nextTripTitle">Nästa resa</h2>
-
-                            <div class="nextTripInfo">
-                                <span class="trip-time">07 Jul. 12:40</span>
-                                <span class="trip-vehicle">Volvo EX90</span>
-                            </div>
-
-                        </div>
-
-                        <div class="nextTripRight">
-                            <a href="#" class="btn btn-primary">Boka ny resa</a>
-                            <a href="#" class="btn btn-secondary">Avbryt resa</a>
-                        </div>
-
-                    </div>
-
-
-                    <div class="lastTripCard">
-                        <h2>Senaste resa</h2>
-
-                        <div class="tripAddresses">
-                            <div class="tripStart">
-                                <p><i class="fas fa-map-marker-alt"></i> <strong>Solna</strong></p>
-                                <p>Frösundaviks allé 15, 169 03</p>
-                            </div>
-                            <div class="tripDivider">|</div>
-                            <div class="tripEnd">
-                                <p><i class="fas fa-map-marker-alt"></i> <strong>Upplands-Väsby</strong></p>
-                                <p>Blackebergsplan 5, 168 49</p>
-                            </div>
-                        </div>
-
-                        <div class="tripLineWrapper">
-                            <hr class="tripGradientLine" />
-                            <span class="dot left-dot"></span>
-                            <span class="dot right-dot"></span>
-                        </div>
-
-                        <div class="tripDetails">
-                            <span><i class="fas fa-clock"></i> 15 Apr. 12:38</span>
-                            <span><i class="fas fa-ruler-horizontal"></i> Sträcka: 24,9 km</span>
-                            <span class="chip">Move-U: 96 p</span>
-                            <span><i class="fas fa-clock"></i> 15 Apr. 12:55</span>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="pointsAndLeasing">
-
-                    <div class="bonusPoints">
-
-                        <div class="bonusPointsTitle">
-                            <h2>Move-U Miles</h2>
-                        </div>
-
-                        <div class="bonusProgress">
-
-                            <div class="progress-bar">
-                                <div class="progress-fill" style="width: 63%;"></div>
-                            </div>
-
-                            <span class="progress-text">2 363 p</span>
-
-                        </div>
-
-                        <div class="bonusLevels">
-
-                            <button class="btn-usePoints">Använd poäng</button>
-
-                            <div class="bonusLevelsRight">
-                                <figure class="level member">
-                                    <div class="bonusDot"></div>
-                                    <figcaption>Medlem</figcaption>
-                                </figure>
-
-                                <figure class="level silver">
-                                    <div class="bonusDot"></div>
-                                    <figcaption>Silver</figcaption>
-                                </figure>
-
-                                <figure class="level gold">
-                                    <div class="bonusDot"></div>
-                                    <figcaption>Guld</figcaption>
-                                </figure>
-
-                                <figure class="level diamond">
-                                    <div class="bonusDot"></div>
-                                    <figcaption>Diamant</figcaption>
-                                </figure>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="leasing">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias a dicta, rem eum
-                            rerum impedit voluptatum. Iusto ipsum et veniam asperiores ipsa. Sequi possimus nemo
-                            r unde ea, enim quae facilis suscipit modi eaque? Architecto
-                            sed earum tempore laborum nostrum reiciendis vitae, quas ipsam porro aspernatur
-                            necessitatibus, saepe atque.</p>
-                    </div>
-
-                    <div class="campaigns">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias a dicta, rem eum
-                            rerum impedit voluptatum. Iusto ipsum et veniam asperiores ipsa. Sequi possimus nemo
-                            r unde ea, enim quae facilis suscipit modi eaque? Architecto
-                            sed earum tempore laborum nostrum reiciendis vitae, quas ipsam porro aspernatur
-                            necessitatibus, saepe atque.</p>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>-->
 
     </main>
 
