--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -154,7 +154,7 @@
 
             </div>
 
-            <div class="overViewContainer">
+            <div class="overviewContainer">
 
                 <div class="welcomeCotainer">
 
@@ -408,7 +408,7 @@
 
     </main>
 
-    <!--<footer>
+    <footer>
 
         <div class="footerContent">
 
@@ -430,7 +430,7 @@
             </div>
         </div>
 
-    </footer>-->
+    </footer>
 
 </body>
 
